# illust-notify

./: .gitignore  Cargo.toml  callback  tray.py
.github/workflows/: build.yml
src/: fetch.rs  hook.rs  inotify.rs  main.rs  notify.rs  store.rs  tray.rs
