[package]
name = "illust-notify"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true

[profile.release-fast]
inherits = "release"
lto = false

[profile.debuginfo]
inherits = "release"
debug = true
strip = false
lto = "thin"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
time = { version = "0.3", features = [
    "formatting",
    "parsing",
    "local-offset",
    "macros",
    "serde",
] }
log = "0.4"
anyhow = "1"
futures = "0.3"
serde_json = "1"
inotify = { version = "0.11", optional = true }
notify = { version = "8", optional = true }
itoa = "1.0"
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }
pixiv = { git = "https://github.com/karin0/pvg-rs.git" }
timeago = { version = "0.5", default-features = false }
reqwest = { version = "0.12", default-features = false, optional = true }
pyo3 = { version = "0.25", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging"] }

[features]
tray = ["dep:pyo3"]
inotify = ["dep:inotify"]
notify = ["dep:notify"]
request = ["dep:reqwest"]
callback = []
download = []
